syntax = "proto3";

package UserService;

option go_package = "github.com/pavel/user_service/pkg/pb/user";
import "pkg/pb/role/role.proto";


service UserService {
  rpc One(OneRequest) returns (OneResponse);
}

message User {
  uint64 id = 1;
  string email = 2;
  string name = 3;
  string description = 4;
  string avatar = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  Role role = 8;
}

message OneRequest{
  uint64 user_id = 1;
}

message OneResponse{
  uint32 status = 1;
  string error = 2;
  User user = 3;
}
